lab1/Test/L1-A-9-65.cmm
int b9j ( struct V2bJAo7Jv9CoP hTtJXcfbJtYO ) {
  float hEKqXgIImzi , cmz4dS [ 715806468 ] = fQ3sZN0J 
    && e_IjgWJ < xlvr + ! Crv3jT1wY6pyHMEcRBK ( n = DdEJvUcKrB 
    || c >= TKHuK0igztl / GPO5r [ QwBWJaCdtjrIn = M1ZKFfOU2cgR2dFMY2Z 
    || FuTl2RtURzjxF3VYa8 && jbQ_iKJcIGsEG1a - eDZKOcmLuZ9QZU 
    * yHQOV ( T3djLu4D0EChQ0QCQyr , NDZ5C5aWOaraBZOFP 
    = tIHvRrKRD4VTmu || kynt29kaQ <= ( m2PStSBdO5 || tAbQeH163kdV581rE_7n 
    == aFjyKUSHIKY5q4Bfk0uW * ( ZE0BHg7 = w1IA || nZl2CbQJQf3zG_KE 
    > rzdmMtIJtklg ) / ! - 1456687079.868380094 != 1179135081 
    ) . JVlLaMALaafEX0q3 ) / ! - nbTzpNNWyw29Jmg61li ( 
    ) ] ) . YssfYfp_3DiKSQt8it0 * - BWtDa2 ;
}
int b3ruVTlwWq4dIAv1oTg ( ) {
  return zZ5GR1JD ;
}
struct _1RkT0Rxr0iC07sn {
  struct {
  }a3cOASpnNWyVCwu ;
;
int zLMDEZz , JpARteaUVgTwtgd15ee7 

;
int ;
int ;
int ;
int eWAA2Dty ( int hcXTmvL1GJab , int BZ5UbhKSLd5_hwmYyxUz 
    ) {
    uSl ;
    if ( LsFdTiBJpPGciLq )     if ( wyD6AfLCsLkt4hkIAdDg 
      )     gOzuUhGH3Ts1 ;
else     if qoD2i5iUaj3BoJp2cdjE )     if ( DU )     while 
      ( PdA ) {

else       kaf2snjcaky ;




    }
